refactor(feat/endpoint_comments): refactor to follow similar structure of getResource endpoint
