# config/routes.rb
@@ -8,7 +8,7 @@ Rails.application.routes.draw do
   scope '/api' do
     defaults format: :json do
       get '/resources/:resource_id', to: 'api_resources#show'
-      get '/resources/:resource_id/resource_comments', to: 'resource_comments#index'
+      get '/resources/:resource_id/resource_comments', to: 'api_resource_comments#show'
     end
     
   end
